--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -304,7 +304,7 @@ The distribution of the items across samples suggests the presence of a consiste
 In other words, participants are most likely to answer 4/5 (i.e., agree) on most items, with the exception of "blood sugar" and "bruise", which exhibit a different distributional pattern with a lower mode (\~2/5). While it is not a problem *per se*, the contrasting distribution might be indicative of items with non-homogeneous psychometric "difficulty".
 This is also the case for "affective touch" in samples 8a and 8b (the Chinese validation samples), which might indicate localisation issues.
 Additionally, one can note the low occurrence of extreme values (1 and 5), meaning that the bulk of answers varies between 3 values (assuming the IAS is implemented as a 5-point Likert scale following its validation).
-The samples using an analogue scale (samples 10a, 10b and 10c in the figure) display a more continuous and progressive spread of answers, seemingly improving the interindividual variability, although potentially displaying a secondary lower mode at \~2 (which might be suggesting the existence of potential clusters of participants).
+The samples using an analogue scale (samples 10, 11 and 12 in the figure) display a more continuous and progressive spread of answers, seemingly improving the interindividual variability, although potentially displaying a secondary lower mode at \~2 (which might be suggesting the existence of potential clusters of participants).
 The correlation matrix between all items shows an overall positive correlation pattern, with highly correlated pairs of items (e.g., Tickle-Itch, Urinate-Defecate, Pain-Wind, Hungry-Thursty) or triplets (Vomit-Sneeze-Cough, Temperature-Muscles-Pain).
 
 
@@ -413,7 +413,7 @@ We selected measures that appeared in multiple datasets from Study 1 and/or were
 
 The Multidimensional Assessment of Interoceptive Awareness Version-2 [MAIA-2, @mehling2018multidimensional] is a 37-item questionnaire assessing eight dimensions of interoception: Noticing, Not-Distracting, Not-Worrying, Attention Regulation, Emotional Awareness, Self-Regulation, Body Listening, and Trust. Responses are rated on a 6-point Likert scale (e.g., “I notice when I am uncomfortable in my body”).
 
-The Body Perception Questionnaire Short Form [BPQ-SF, @cabrera2018assessing] contains 46 items measuring body awareness and autonomic reactivity on a 5-point Likert scale (e.g., “My heart often beats irregularly”). The very-short form (BPQ-VSF) contains 12 items from the body awareness subscale. For this study, scores from both versions were combined.
+The Body Perception Questionnaire Short Form [BPQ-SF, @cabrera2018assessing] contains 46 items measuring Body Awareness and Autonomic Reactivity on a 5-point Likert scale (e.g., “My heart often beats irregularly”). The very-short form (BPQ-VSF) contains 12 items from the Body Awareness subscale. For this study, scores from both versions were combined.
 
 The Interoceptive Confusion Questionnaire [ICQ, @brewer2016alexithymia] consists of 20 items rated on a 5-point Likert scale (e.g., “I cannot tell when my muscles are sore or tight”) assessing difficulties in interpreting non-affective physiological states, such as pain or hunger.
 
@@ -470,7 +470,7 @@ The Lie Scale [LIE, @makowski2023structure] is a 16-item measure of lying tenden
 All variables from the 16 open-access datasets will be extracted and standardized (z-scored). For continuous predictors, we will first ensure consistent ranges across datasets; when necessary, ranges will be rescaled to achieve comparability. In cases where scales of different lengths measure the same construct, scores will be harmonized: when possible, means will be computed from overlapping items, while in other cases total scores will be normalized by the number of items. We will collapse redundant subscales (e.g., PHQ-2 and GAD-2 within PHQ-4) into unified composite scores. Similarly, short forms of trait anxiety (e.g., STAI-5-trait) will be collapsed with their longer counterpart (STAI-T), with scores computed as the mean to ensure comparable ranges. Shorter formats of the PI (PI-18) will be combined with scores of its longer version (PI-99). Missing data will be handled via listwise deletion on a per-model basis prior to fitting.
 
 <!-- Multilevel modelling approach -->
-Associations will be estimated using multilevel regression models implemented in the glmmTMB package [@glmTMB]. Each predictor will be entered separately, with the seven IAS item pairs identified in Study 1 (“Hungry–Thirsty”, “Muscles–Pain”, “Wind–Burp”, “Urinate–Defecate”, “Breathing–Heart”, “Bruise–Blood”, “Cough–Sneeze”) and the original IAS scale serving as outcomes. Models will include random intercepts and slopes by sample to account for between-study heterogeneity; when models fail to converge, a reduced structure with random intercepts only will be used. This approach will treat datasets as clusters, thereby providing pooled estimates of the associations while accounting for both within- and between-sample variability, akin to a meta-analytic framework.
+Associations will be estimated using multilevel regression models implemented in the glmmTMB package [@glmTMB]. Each predictor will be entered separately, with the seven IAS item pairs identified in Study 1 (Hungry–Thirsty, Muscles–Pain, Wind–Burp, Urinate–Defecate, Breathing–Heart, Bruise–Blood, Cough–Sneeze) and the original IAS scale serving as outcomes. Models will include random intercepts and slopes by sample to account for between-study heterogeneity; when models fail to converge, a reduced structure with random intercepts only will be used. This approach will treat datasets as clusters, thereby providing pooled estimates of the associations while accounting for both within- and between-sample variability, akin to a meta-analytic framework.
 
 <!-- Extraction of parameters -->
 From each fitted model, we will extract standardized regression coefficients (β), 95% confidence intervals, p-values, convergence status, and effective sample size. Participants identifying as “Other” will be excluded from analyses due to limited representation.
@@ -478,19 +478,36 @@ From each fitted model, we will extract standardized regression coefficients (β
 ## Results
 
 <!-- Demographic correlates -->
-Age was positively associated across Ias correlates (mean r = .12), with all correlations significant. Gender showed near-zero effects (mean r = −.01), with 63% reaching significance.
+Age was positively associated across Ias correlates (mean r = .13), with all correlations significant. Gender showed near-zero effects (mean r = −.06), reaching significance only with the Hungry-Thirsty, Wind-Burp and Urinate-Defecate pairings.
 
 <!-- Interoceptive measures -->
-Several MAIA subscales showed consistent positive associations with the IAS: Noticing, Attention Regulation, Trusting, Emotional Awareness, Listening, and Self-Regulation (βs ≈ .18–.26). These effects were generally strongest for the full IAS, but often replicated with Hungry/Thirsty or Bruise/Blood pairings. By contrast, Autonomic Reactivity (BPQ; β = −.17) was reliably negative across most pairings, while Body Awareness (BPQ; β = .12) was weak and only reliable for Hungry/Thirsty and Bruise/Blood. Alexithymia measures were consistently negative, with robust effects across both the full IAS and pairings, except for the Affective dimension of the BVAQ which showed only a positive association with the Bruise/Blood sugar pairing (β = .04).
+Several MAIA subscales showed consistent positive associations with the IAS: Noticing, Body Listening, Attention Regulation, Trusting, Emotional Awareness, and Self-Regulation (mean r ≈ .18–.26), with effects generally stronger for the full IAS, with the exception of the Body Listenig dimension whose associations were stronger with the Bruise-Blood pairing. The Not Distracting subscale was significantly associated with the whole scale and with three of the seven pairs, namely Hungry–Thirsty, Bruise–Blood sugar, and Muscles–Pain (mean r ≈ .19–.13). By contrast, the Not Worrying subscale was only significant for the full IAS and the Hungry–Thirsty and Urinate–Defecate pairings (mean r ≈ −.009–.108).
+
+Autonomic Reactivity (BPQ; mean r = −.19) was reliably negative across most pairings, while Body Awareness (BPQ; mean r = .12) was weak and only reliable for Bruise-Blood.
+
+In terms of interoceptive deficits, alexithymia measures were consistently negative, with robust effects across both the full IAS and pairings, except for the Affective dimension of the BVAQ, which showed a positive association only with the Bruise–Blood sugar pairing (r = .16). Interoceptive confusion assessed with the ICQ was also consistently negatively associated with all pairings and the full IAS (mean r ≈ −.49–.20).
 
 <!-- Mood and psychopathology -->
-Depression (BDI; β = −.20) and anxiety (STAI-T; β = −.19) were consistently negative across the IAS and most pairings, with Hungry/Thirsty again emerging as a particularly sensitive correlate. Broader symptom indices (PHQ-15, PHQ-4, GAD-7) showed weaker but often reliable effects, although some were restricted to certain pairings (e.g., PHQ-15 with Hungry/Thirsty, Bruise/Blood). By contrast, PHQ-9 and MFQ averaged negatively but were largely nonsignificant, even with the full scale. Autistic traits were generally negative, especially Imagination (β = −.18), which showed broad consistency across pairings except Cough/Sneeze.
+Depression (BDI; mean r = −.20) and anxiety (STAI-T; mean r = −.19) were consistently negative across the IAS and most pairings, with Hungry–Thirsty again emerging as a particularly sensitive correlate. Notably, different measures indexing similar constructs showed distinct association patterns: the MFQ was largely nonsignificant despite measuring depressive symptoms comparable to for instance the BDI. Similarly, PHQ-9 followed a weaker and less reliable pattern. Related symptom measures (PHQ-15, PHQ-4, GAD-7) showed weaker but often reliable effects, although some were restricted to specific pairings (e.g., PHQ-15 not significant with Wind–Burp and Breathing–Heart). Notably, most of the mood measures (PHQ-9, BDI, PHQ-4, STAI-T, GAD-7) displayed stronger associations with the Hungry-Thristy pairing than the full IAS.
+
+<!-- Psychopathologies -->
+Autistic traits were generally negatively associated with the IAS, with Imagination (mean r = −.18) showing the most consistent effects across pairings, except for Cough–Sneeze. Most of the significant associations between the full IAS and autistic traits were driven by the first three pairings—Hungry–Thirsty, Bruise–Blood sugar, and Muscles–Pain—which showed the strongest and most reliable negative correlations. Beyond these, effects tended to weaken and often became nonsignificant, particularly for Patterns and Numbers, which did not correlate with any IAS correlate. Borderline Personality was only significantly associated with the Hungry–Thirsty pairing (mean r = −.14). 
+
+Lastly, schizotypal traits (SPQ) were also generally negative and non-significant, but several significant associations with the full IAS appeared to be driven by particular pairings. 
+
+Autistic traits were generally negatively associated with the IAS, with Imagination (mean r = −.18) showing the most consistent effects across pairings, except for Cough–Sneeze. Across subscales, most associations observed for the full IAS were primarily driven by the first three pairings—Hungry–Thirsty, Bruise–Blood sugar, and Muscles–Pain— which showed the strongest and most reliable negative correlations. Beyond these, effects tended to weaken and often became nonsignificant, particularly for Patterns and Numbers, which did not correlate with any IAS correlate, while Borderline Personality only correlated with the Hungry–Thirsty pairing (mean r = −.14).
+
+Schizotypal traits were generally negatively associated with the IAS, with Social Anxiety (mean r = −.11) and No Close Friends (mean r = −.12) showing the most consistent negative effects across pairings. Notably, although some facets did not show consistent associations with the overall IAS, they were significantly related to specific pairings. For example, Unusual Perceptions was associated with the Muscles–Pain and Urinate–Defecate pairings, whereas Eccentric was associated with the Hungry–Thirsty and Urinate–Defecate pairings.
 
 <!-- Personality and beliefs -->
-Within the Big Five, Openness (β = .14), Agreeableness (β = .05), and Conscientiousness (β = .03) showed small but consistent positive associations, most reliably captured by the full IAS but also evident in pairings. Honesty–Humility was uniquely negative, with significant associations for both the full scale and Hungry/Thirsty. Worldview measures were generally null, though belief in a comprehensible world (β = .11) and an “alive” world (β = .09) showed small but consistent positive associations, mainly with the full IAS and Hungry/Thirsty.
+Within the Big Five, Openness (mean r = .14), Agreeableness (mean r = .05), and Conscientiousness (mean r = .03) showed small but consistent positive associations, most reliably captured by the full IAS but also evident in pairings. Honesty–Humility showed a unique negative association with the full IAS scale, largely driven by the Hunger–Thirst and Bruise–Blood sugar item pairings. Similarly, Neuroticism was negatively associated with the full IAS, but this relationship was primarily attributable to the Hunger–Thirst and Wind–Burp pairings, with the strongest correlation observed for Hunger–Thirst (r = −.23).
+
+Worldview measures were largely null, but certain beliefs showed small yet consistent associations with specific IAS item pairings. Belief in a comprehensible world (“Understandable”) correlated positively with most pairings except Urinate–Defecate and Cough–Sneeze, while beliefs that the world is “Alive” and “Hierarchical” were associated with the full IAS and Hunger–Thirsty, and “Good” was uniquely linked to Muscles–Pain (mean r = .09). For the Lying Profile, only Lying Contextuality showed a notable negative association with the Bruise–Blood sugar pairing (r = −.12).
+
+Conspiracy Beliefs showed selective associations, with Global Conspiracies linked to the full IAS and several pairings (Original, Hunger–Thirsty, Cough–Sneeze, Urinate–Defecate; mean r = .103), Personal Wellbeing to the full IAS and Hunger–Thirsty (mean r = .086), and Information Control to Cough–Sneeze (mean r =  .06). 
 
 <!-- Differences between the full IAS and item pairings -->
-Overall, the full IAS yielded the largest number of significant associations (25), but the Hungry/Thirsty (16) and Bruise/Blood sugar (11) pairings frequently showed equally strong or stronger effects. These item-level pairings often captured variance that the full scale did not, particularly for interoceptive and mood measures. In contrast, other pairings (e.g., Cough/Sneeze, Wind/Burp, Urinate/Defecate) contributed little unique variance. Together, these results suggest that while the full IAS captures broad dispositional tendencies, select pairings may provide more fine-grained sensitivity to specific domains, particularly interoception and affect.
+Overall, the full IAS yielded the largest number of significant associations (29), but these were often driven by specific item pairings rather than reflecting uniform effects across the scale. The Hungry–Thirsty (17) and Bruise–Blood sugar (10) pairings consistently produced equally strong or stronger effects, particularly for interoceptive, mood, and psychopathology measures. In contrast, other pairings (e.g., Cough–Sneeze, Wind–Burp, Urinate–Defecate) contributed little unique variance and rarely produced meaningful associations.
 
 ## Discussion
 
@@ -528,6 +545,11 @@ In contrast, our study applied multiple methods including EGA, FA, and HCA yet t
 We found that these locally dependent items can instead be interpreted as meaningful pairs (e.g., Heart–Breath), reflecting distinct bodily domains. Because IRT assumes unidimensionality [@nguyen2014introduction], it may have treated these natural item clusters as statistical artefacts rather than as theoretically relevant structures within interoceptive accuracy.
 
 <!-- Study 2 findings -->
+
+<!-- - is the IAS really assessing interoception (lack of relationship with BPQ-awareness)
+- breathing - heart the most interoceptive items but less correlated (image figure 3?#)
+- Together, these results indicate that while the full IAS captures broad dispositional tendencies, its significant associations with external measures are frequently underpinned by a subset of item pairings, which appear more sensitive to specific interoceptive and affective domains. -->
+
 Study 2 provided further evidence for a domain-specific perspective. Certain item pairings, particularly Hunger-Thirst, Bruise-Blood sugar, and Muscles-Pain, showed consistent negative correlations with depression and anxiety measures, sometimes approaching or even surpassing the strength of associations observed for the full IAS scale. Notably, Hunger–Thirst and Bruise–Blood sugar were also the only pairs, out of the seven examined, that displayed significant positive correlations with the BPQ Body Awareness subscale, whereas the full IAS scale showed no such association.
 
 Additionally, specific item pairings revealed distinct patterns of association with other interoceptive measures and mental health indices that were not captured by the full IAS. For instance, while the full IAS showed no significant associations with Borderline Personality, the Hunger-Thirst pair exhibited negative correlations. These findings collectively suggest that item-level analyses may uncover more nuanced relationships than those identified by the overall scale. This pattern highlights that questionnaires like the IAS may capture multiple facets of interoception rather than a single underlying dimension. Consequently, adopting a domain-specific approach could enhance construct validity by better reflecting the heterogeneity of interoceptive experiences.
