--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -491,10 +491,6 @@ In terms of interoceptive deficits, alexithymia measures were consistently negat
 Depression (BDI; mean r = −.20) and anxiety (STAI-T; mean r = −.19) were consistently negative across the IAS and most pairings, with Hungry–Thirsty again emerging as a particularly sensitive correlate. Notably, different measures indexing similar constructs showed distinct association patterns: the MFQ was largely nonsignificant despite measuring depressive symptoms comparable to for instance the BDI. Similarly, PHQ-9 followed a weaker and less reliable pattern. Related symptom measures (PHQ-15, PHQ-4, GAD-7) showed weaker but often reliable effects, although some were restricted to specific pairings (e.g., PHQ-15 not significant with Wind–Burp and Breathing–Heart). Notably, most of the mood measures (PHQ-9, BDI, PHQ-4, STAI-T, GAD-7) displayed stronger associations with the Hungry-Thristy pairing than the full IAS.
 
 <!-- Psychopathologies -->
-Autistic traits were generally negatively associated with the IAS, with Imagination (mean r = −.18) showing the most consistent effects across pairings, except for Cough–Sneeze. Most of the significant associations between the full IAS and autistic traits were driven by the first three pairings—Hungry–Thirsty, Bruise–Blood sugar, and Muscles–Pain—which showed the strongest and most reliable negative correlations. Beyond these, effects tended to weaken and often became nonsignificant, particularly for Patterns and Numbers, which did not correlate with any IAS correlate. Borderline Personality was only significantly associated with the Hungry–Thirsty pairing (mean r = −.14). 
-
-Lastly, schizotypal traits (SPQ) were also generally negative and non-significant, but several significant associations with the full IAS appeared to be driven by particular pairings. 
-
 Autistic traits were generally negatively associated with the IAS, with Imagination (mean r = −.18) showing the most consistent effects across pairings, except for Cough–Sneeze. Across subscales, most associations observed for the full IAS were primarily driven by the first three pairings—Hungry–Thirsty, Bruise–Blood sugar, and Muscles–Pain— which showed the strongest and most reliable negative correlations. Beyond these, effects tended to weaken and often became nonsignificant, particularly for Patterns and Numbers, which did not correlate with any IAS correlate, while Borderline Personality only correlated with the Hungry–Thirsty pairing (mean r = −.14).
 
 Schizotypal traits were generally negatively associated with the IAS, with Social Anxiety (mean r = −.11) and No Close Friends (mean r = −.12) showing the most consistent negative effects across pairings. Notably, although some facets did not show consistent associations with the overall IAS, they were significantly related to specific pairings. For example, Unusual Perceptions was associated with the Muscles–Pain and Urinate–Defecate pairings, whereas Eccentric was associated with the Hungry–Thirsty and Urinate–Defecate pairings.
@@ -502,7 +498,7 @@ Schizotypal traits were generally negatively associated with the IAS, with Socia
 <!-- Personality and beliefs -->
 Within the Big Five, Openness (mean r = .14), Agreeableness (mean r = .05), and Conscientiousness (mean r = .03) showed small but consistent positive associations, most reliably captured by the full IAS but also evident in pairings. Honesty–Humility showed a unique negative association with the full IAS scale, largely driven by the Hunger–Thirst and Bruise–Blood sugar item pairings. Similarly, Neuroticism was negatively associated with the full IAS, but this relationship was primarily attributable to the Hunger–Thirst and Wind–Burp pairings, with the strongest correlation observed for Hunger–Thirst (r = −.23).
 
-Worldview measures were largely null, but certain beliefs showed small yet consistent associations with specific IAS item pairings. Belief in a comprehensible world (“Understandable”) correlated positively with most pairings except Urinate–Defecate and Cough–Sneeze, while beliefs that the world is “Alive” and “Hierarchical” were associated with the full IAS and Hunger–Thirsty, and “Good” was uniquely linked to Muscles–Pain (mean r = .09). For the Lying Profile, only Lying Contextuality showed a notable negative association with the Bruise–Blood sugar pairing (r = −.12).
+Primal world beliefs measures were largely null, but certain beliefs showed small yet consistent associations with specific IAS item pairings. Belief in a comprehensible world (“Understandable”) correlated positively with most pairings except Urinate–Defecate and Cough–Sneeze, while beliefs that the world is “Alive” and “Hierarchical” were associated with the full IAS and Hunger–Thirsty, and “Good” was uniquely linked to Muscles–Pain (mean r = .09). For the Lying Profile, only Lying Contextuality showed a notable negative association with the Bruise–Blood sugar pairing (r = −.12).
 
 Conspiracy Beliefs showed selective associations, with Global Conspiracies linked to the full IAS and several pairings (Original, Hunger–Thirsty, Cough–Sneeze, Urinate–Defecate; mean r = .103), Personal Wellbeing to the full IAS and Hunger–Thirsty (mean r = .086), and Information Control to Cough–Sneeze (mean r =  .06). 
 
